# motel

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
examples/keyframes/log/: frame.000  frame.045  frame.076
examples/keyframes/metrics/: frame.000
examples/keyframes/trace/: frame.000  frame.017  frame.042  frame.054  frame.079  frame.093  frame.104  frame.115  frame.137
proto/: query.proto
skills/motel/: SKILL.md
src/: anomaly.rs  cli.rs  config.rs  diff.rs  install.rs  main.rs  mcp.rs  sink.rs  store.rs
src/alert/: mod.rs  notifier.rs  rule.rs
src/client/: clear.rs  diff.rs  export.rs  import.rs  init.rs  latency.rs  log.rs  metrics.rs  mod.rs  replay.rs  service_map.rs  shutdown.rs  sql.rs  status.rs  trace.rs  view.rs
src/persist/: mod.rs  parquet.rs  sqlite.rs
src/query/: arrow_convert.rs  arrow_schema.rs  datafusion_ctx.rs  mod.rs  table_provider.rs
src/query/sql/: convert.rs  mod.rs
src/server/: forwarder.rs  mod.rs  otlp_grpc.rs  otlp_http.rs  prometheus.rs  query_grpc.rs  query_http.rs  web.rs
src/server/web_assets/: app.js  index.html  style.css
src/tui/: app.rs  diff_ui.rs  event.rs  mod.rs  ui.rs
tests/: e2e_client.rs  e2e_export.rs  e2e_replay.rs  integration_forwarding.rs  integration_import.rs  integration_mcp.rs  integration_otlp_grpc.rs  integration_otlp_http.rs  integration_prometheus.rs  integration_query.rs  integration_query_http.rs  integration_web.rs
tests/common/: mod.rs
