[package]
name = "motel"
version = "0.1.0"
edition = "2024"
description = "Memory OTel — in-memory OpenTelemetry server with querying and TUI visualization"
license = "MIT"
repository = "https://github.com/jasonwmiller/motel"
keywords = ["opentelemetry", "otlp", "observability", "tui", "tracing"]
categories = ["command-line-utilities", "development-tools::profiling"]
readme = "README.md"

[[bin]]
name = "motel"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1"
arrow = { version = "57.3.0", features = ["prettyprint"] }
axum = "0.8.8"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive", "env"] }
crossterm = "0.29.0"
csv = "1.4.0"
datafusion = "52.2.0"
futures = "0.3"
glob = "0.3"
hex = "0.4.3"
parquet = "57.3.0"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
rusqlite = { version = "0.35", features = ["bundled"] }
prost = "0.14.3"
prost-types = "0.14.3"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.14.5"
tonic-prost = "0.14.5"
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmcp = { version = "1.1.0", features = ["server", "transport-async-rw"] }
schemars = "1.2.1"

[dev-dependencies]
hex = "0.4.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tempfile = "3"
tokio = { version = "1.50.0", features = ["full", "test-util"] }

[build-dependencies]
tonic-build = "0.14.5"
tonic-prost-build = "0.14.5"
prost-build = "0.14.3"
